--- a/templates/index.html
+++ b/templates/index.html
@@ -107,11 +107,11 @@
             </div>
 
         </div>
-        <div class="row mt-6">
+        <!-- <div class="row mt-6">
             <div class="col-md-6 mx-auto text-center">
                 <a href="#" class="btn btn-primary">View all posts</a>
             </div>
-        </div>
+        </div> -->
     </div>
 </section>
 
@@ -155,10 +155,10 @@
             </div>
         </div>
         <div class="row mt-4">
-            <div class="col-md-6 mx-auto text-center">
+            <!-- <div class="col-md-6 mx-auto text-center">
                 <h5 class="mb-4">Have questions?</h5>
                 <a href="#" class="btn btn-primary">Contact us</a>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
@@ -226,7 +226,10 @@
             <div class="col-sm-2">
                 <h5>Links</h5>
                 <ul class="list-unstyled">
-                    <li><a href="#">DynMap</a></li>
+                    <li><a href="map.veiled-haven.net">DynMap</a></li>
+                </ul>
+                <ul class="list-unstyled">
+                    <li><a href="admin.veiled-haven.net">Admin</a></li>
                 </ul>
             </div>
         </div>
