--- a/templates/success.html
+++ b/templates/success.html
@@ -8,7 +8,7 @@
 </head>
 
 <body><center>
-  <h1>Success, we'll contact you via Discord!</h1>
+  <h1>Success, we'll contact you via Discord! Make sure that you are able to recieve Friend Requests!</h1>
   <p>You can now close this tab, or go <a href="/">back to the Homepage</a></p>
 </center></body>
 
