--- a/templates/index.html
+++ b/templates/index.html
@@ -226,10 +226,10 @@
             <div class="col-sm-2">
                 <h5>Links</h5>
                 <ul class="list-unstyled">
-                    <li><a href="map.veiled-haven.net">DynMap</a></li>
+                    <li><a href="https://map.veiled-haven.net">DynMap</a></li>
                 </ul>
                 <ul class="list-unstyled">
-                    <li><a href="admin.veiled-haven.net">Admin</a></li>
+                    <li><a href="https://admin.veiled-haven.net">Admin</a></li>
                 </ul>
             </div>
         </div>
