improve templating and success page

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -4646,7 +4646,7 @@ button.bg-light:focus {
   background-image: url("../img/screenshot-2.jpg") !important;
 }
 .bg-image-3{
-  background-image: url("../img/screenshot-1.jpg") !important;
+  background-image: url("../img/screenshot-townsquare.jpg") !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
