--- a/templates/parts/head.html
+++ b/templates/parts/head.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"> -->
 
     <!-- Bootstrap CSS / Color Scheme -->
-    <link rel="stylesheet" href="css/default.css" id="theme-color">
+            </a>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}" id="theme-color">
 </head>
 <body>
