--- a/templates/success.html
+++ b/templates/success.html
@@ -1,4 +1,5 @@
 {% include 'parts/head.html' %}
+{% include 'parts/navigation.html' %}
 <!--hero header-->
 <section class="bg-image bg-image-3 py-7 py-md-0 bg-hero" id="home">
     <div class="container">
