--- a/templates/parts/head.html
+++ b/templates/parts/head.html
@@ -6,16 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Veiled Haven - Vanilla Survival Minecraft</title>
     <meta name="description" content=""/>
-
-    <!--Inter UI font-->
-
-    <!--vendors styles-->
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"> -->
-
-    <!-- Bootstrap CSS / Color Scheme -->
-            </a>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}" id="theme-color">
 </head>
 <body>
