--- a/templates/parts/head.html
+++ b/templates/parts/head.html
@@ -5,7 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Veiled Haven - Vanilla Survival Minecraft</title>
-    <meta name="description" content=""/>
+
+    <meta name="title" content="Veiled Haven - Vanilla Survival Minecraft" />
+    <meta name="description" content="A Minecraft Server Project with a focus on keeping a vanilla gameplay experience and maintaining a mature community!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Veiled Haven - Vanilla Survival Minecraft" />
+    <meta property="og:description" content="A Minecraft Server Project with a focus on keeping a vanilla gameplay experience and maintaining a mature community" />
+    <meta property="og:image" content="{{ url_for('static', filename='img/poster.png') }}" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Veiled Haven - Vanilla Survival Minecraft" />
+    <meta property="twitter:description" content="A Minecraft Server Project with a focus on keeping a vanilla gameplay experience and maintaining a mature community" />
+    <meta property="twitter:image" content="{{ url_for('static', filename='img/poster.png') }}" />
+
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/default.css') }}" id="theme-color">
