feat: disable unused/commented out stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,11 +54,13 @@
             </div>
 
         </div>
-        <!-- <div class="row mt-6">
+{#% disable "View all posts" button as we dont have a galery yet!
+        <div class="row mt-6">
             <div class="col-md-6 mx-auto text-center">
                 <a href="#" class="btn btn-primary">View all posts</a>
             </div>
-        </div> -->
+        </div>
+%#}
     </div>
 </section>
 
@@ -101,12 +103,14 @@
                 </div>
             </div>
         </div>
+{#% disable contact us button
         <div class="row mt-4">
-            <!-- <div class="col-md-6 mx-auto text-center">
+            <div class="col-md-6 mx-auto text-center">
                 <h5 class="mb-4">Have questions?</h5>
                 <a href="#" class="btn btn-primary">Contact us</a>
-            </div> -->
+            </div>
         </div>
+%#}
     </div>
 </section>
 
@@ -165,11 +169,14 @@
                 <h5>Veiled Haven</h5>
                 <p class="text-muted">A Minecraft Server Project with a focus on keeping a vanilla gameplay experience and maintaining an adult community!</p>
                 <ul class="list-inline social social-sm">
-                    <!-- <li class="list-inline-item">
+{#% disable discord social icon as we are invite only!
+                    <li class="list-inline-item">
                         <a href=""><i class="fa fa-brands fa-discord"></i></a>
-                    </li> -->
+                    </li>
+%#}
                 </ul>
             </div>
+{#% disable link section for now
             <div class="col-sm-2">
                 <h5>Links</h5>
                 <ul class="list-unstyled">
@@ -179,10 +186,11 @@
                     <li><a href="https://admin.veiled-haven.net">Admin</a></li>
                 </ul>
             </div>
+%#}
         </div>
         <div class="row mt-5">
             <div class="col-12 text-muted text-center small-xl">
-                &copy; 2023 Veiled Haven - All Rights Reserved
+                &copy; 2023-2024 Veiled Haven - All Rights Reserved
             </div>
         </div>
     </div>
