--- a/templates/parts/navigation.html
+++ b/templates/parts/navigation.html
@@ -16,9 +16,11 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#home">Home</a>
                     </li>
+{#% disable Screenshot section
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#screenshots">Screenshots</a>
                     </li>
+%#}
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#faq">FAQ</a>
                     </li>
