--- a/templates/parts/navigation.html
+++ b/templates/parts/navigation.html
@@ -28,7 +28,7 @@
                         <a class="nav-link page-scroll" href="#rules">Rules</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#application">Application Form</a>
+                        <a class="nav-link page-scroll" href="#application">Application</a>
                     </li>
                 </ul>
                 {% endif %}
