feat: update rules and update social links

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,20 +125,20 @@
         </div>
         <!--rules list-->
         <div class="row pt-5 pricing-table">
-            <div class="col-12 offset-md-1">
+            <div class="col-10 offset-md-1">
                 <ol class="features-list">
-                    <li><strong>Follow Discord's TOS</strong><br> When on Discord, follow their Terms of Service!: https://discordapp.com/terms &amp; https://discordapp.com/guidelines</li>
-                    <li><strong>Minimum age requirement</strong><br> The minimum age requirement for participating on our server is 16 years old. We are committed to maintaining a mature and respectful community, and we believe that a minimum age requirement helps to ensure that our players are able to contribute to this goal.</li>
-                    <li><strong>Respect other players</strong><br> Players should treat others with respect and avoid hate speech, bullying, or harassment. This includes any form of discrimination, such as racism, sexism, or homophobia.</li>
-                    <li><strong>No NSFW content</strong><br> Sharing of NSFW (Not Safe for Work) content, including but not limited to explicit images, videos, or links, is strictly prohibited on our server. We do not tolerate any form of sexually explicit, violent, or otherwise inappropriate content that could be considered offensive or harmful to others.</li>
-                    <li><strong>No griefing</strong><br> Players are not allowed to destroy or modify other players' structures without permission. This includes any form of griefing, such as stealing, breaking blocks, or flooding areas.</li>
-                    <li><strong>Respect Build space</strong><br> Don't build too close to other players, always ask before you build near another player. Make sure to leave enough room between your builds to avoid interfering with their work. It is also important to ensure that your own build does not impede on any server infrastructure, such as spawn points, roads, community projects or public areas.</li>
-                    <li><strong>No spamming</strong><br> Players should avoid excessive chat messages, commands, Voice chat, or other forms of spamming that disrupt the gameplay experience for others. This includes any form of advertisement or self-promotion.</li>
-                    <li><strong>No advertising</strong><br> Players should not advertise other servers or websites within the server. This includes any form of solicitation or promotion of unrelated content.</li>
-                    <li><strong>No cheating</strong><br> Players are not allowed to use any hacks, mods, or exploits that give them an unfair advantage over other players. This includes x-ray mods, fly hacks, or any other cheat that allows players to bypass normal gameplay mechanics.</li>
-                    <li><strong>No duping</strong><br> The use of any form of block or item duplication glitch/exploit is strictly prohibited! With the exception of duping TNT.</li>
-                    <li><strong>Play fair</strong><br> Players should aim to have fun while playing fair and maintaining a friendly, inclusive environment for everyone. This includes avoiding any form of toxic behavior or negative attitude towards other players.</li>
-                </ul>
+                    <li><strong>Discord TOS</strong>: When on Discord, follow the Discord Terms of Service Terms | Guidelines</li>
+                    <li><strong>Minimum age requirement</strong>: You must be atleast 16 years of age to participate in Veiled Haven. We want to maintaining a mature and respectful community, and we believe that keeping minimum age at 16 helps to ensure that our players are able to contribute to this goal.</li>
+                    <li><strong>Respect others</strong>: Players should treat others with respect and avoid hate speech, bullying, or harassment. This includes any form of discrimination, such as racism, sexism, or homophobia.</li>
+                    <li><strong>No NSFW content</strong>: Sharing of NSFW (Not Safe for Work) content, including but not limited to explicit images, videos, or links, is strictly prohibited on Veiled Haven. We do not tolerate any form of sexually explicit, violent, or otherwise inappropriate content that could be considered offensive or harmful to others.</li>
+                    <li><strong>No griefing</strong>: Players are not allowed to destroy or modify other players' structures without permission. This includes any form of griefing, such as stealing, breaking blocks, or flooding areas.</li>
+                    <li><strong>Respect Build space</strong>: Make sure there is atleast a distance of 200 blocks to your build from another players unless you are in a group or if that player has given you permission to build near them. Additionally, please ensure that your creations do not impede on any server infrastructure, such as spawn points, roads, community projects, or public areas.</li>
+                    <li><strong>No spamming</strong>: Players should avoid sending excessive messages, commands & other forms of spamming that disrupt the gameplay experience for others. This includes any form of advertisement or self-promotion unless otherwise stated by staff.</li>
+                    <li><strong>No advertising</strong>: Players should not advertise other servers or websites within the server. This includes any form of solicitation or promotion of unrelated content unless otherwise stated by staff.</li>
+                    <li><strong>No cheating</strong>: Players are not allowed to use any hacks, mods, or exploits that give them an unfair advantage over their fellow members. This includes x-ray mods, fly hacks, or any other cheat that allows players to bypass normal gameplay mechanics.</li>
+                    <li><strong>No duping</strong>: The use of any form of block or item duplication glitch/exploit is strictly prohibited with the exception of TNT.</li>
+                    <li><strong>Application</strong>: Upon your application to Veiled Haven the final question will be "What was the hidden word in the rules?" The hidden word you must input is Dango.</li>
+                </ol>
             </div>
         </div>
     </div>
@@ -151,7 +151,7 @@
             <div class="col-md-10 mx-auto text-center">
                 <h2 class="heading-black">Application!</h2>
                 <p>Ready to dive into the adventure of Veiled Haven? Join our Discord and apply now to start your journey!</p>
-                <a href="https://discord.com/invite/XBsWNw7zQu" class="btn btn-primary"><i class="fa fa-brands fa-discord"></i> Join Veiled Haven on Discord</a>
+                <a href="https://discord.com/invite/XBsWNw7zQu" class="btn btn-primary"><i class="fa fa-brands fa-discord"></i> Join Veiled Haven on Discord <i class="fa fa-brands fa-discord"></i></a>
             </div>
         </div>
     </div>
@@ -164,16 +164,13 @@
             <div class="col-sm-5 mr-auto">
                 <h5>Veiled Haven</h5>
                 <p class="text-muted">A Minecraft Server Project with a focus on keeping a vanilla gameplay experience and maintaining an adult community!</p>
-                <ul class="list-inline social social-sm">
-                    <li class="list-inline-item">
-                        <a href="https://discord.com/invite/XBsWNw7zQu"><i class="fa fa-brands fa-discord"></i></a>
-                    </li>
-                </ul>
+                <p><a href="https://discord.com/invite/XBsWNw7zQu"><i class="fa fa-brands fa-discord"></i></a> <a href="https://www.reddit.com/user/veiled_haven/"><i class="fa fa-brands fa-reddit"></i></a></p>
             </div>
             <div class="col-sm-2">
                 <h5>Links</h5>
                 <ul class="list-unstyled">
-                    <li><a href="https://map.veiled-haven.net">Map</a></li>
+                    <li><a href="https://map.veiled-haven.net"><i class="fa fa-solid fa-map"></i> Map</a></li>
+                    <li><a href="https://www.reddit.com/user/veiled_haven/"><i class="fa fa-brands fa-reddit"></i> Reddit</a></li>
                 </ul>
             </div>
         </div>
