--- a/templates/parts/head.html
+++ b/templates/parts/head.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Veiled Haven - Vanilla Survival Minecraft</title>
 
     <meta name="title" content="Veiled Haven - Vanilla Survival Minecraft" />
