--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,6 @@
         </div>
     </div>
 </section>
-{#% disable Screenshot section
 <!--screenshot section-->
 <section class="py-7 section-angle top-left bottom-left" id="screenshots">
     <div class="container">
@@ -22,48 +21,23 @@
             </div>
         </div>
         <div class="row mt-5">
+            {% for image in images %}
             <div class="col-md-4">
                 <div class="card">
-                    <a href="{{ url_for('static', filename="img/screenshot-2.jpg") }}">
-                        <img class="card-img-top img-raised" src="{{ url_for('static', filename="img/screenshot-2.jpg") }}" alt="Blog 1">
+                    <a href="{{ image }}">
+                        <img class="card-img-top img-raised" src="{{ image }}" alt="">
                     </a>
-                    <div class="card-body">
-                        <p class="text-muted small-xl mb-2">Apr 18, 2023 - A player build.</p>
-                    </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <a href="{{ url_for('static', filename="img/screenshot-townsquare.jpg") }}">
-                        <img class="card-img-top img-raised" src="{{ url_for('static', filename="img/screenshot-townsquare.jpg") }}" alt="Blog 1">
-                    </a>
-                    <div class="card-body">
-                        <p class="text-muted small-xl mb-2">Apr 18, 2023 - Townsquare.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <a href="{{ url_for('static', filename="img/screenshot-dragonfight.jpg") }}">
-                        <img class="card-img-top img-raised" src="{{ url_for('static', filename="img/screenshot-dragonfight.jpg") }}" alt="Blog 1">
-                    </a>
-                    <div class="card-body">
-                        <p class="text-muted small-xl mb-2">Apr 21, 2023 - Dragonfight.</p>
-                    </div>
-                </div>
-            </div>
-
+            {% endfor %}
         </div>
-<!--
         <div class="row mt-6">
             <div class="col-md-6 mx-auto text-center">
-                <a href="#" class="btn btn-primary">View all posts</a>
+                <a href="/galery" class="btn btn-primary">Go to Galery</a>
             </div>
         </div>
--->
     </div>
 </section>
-%#}
 <!--faq section-->
 <section class="py-7 bg-image bg-image-2  bg-hero" id="faq">
     <div class="container">
@@ -307,4 +281,5 @@
     document.location.hash = '#' + '{{ anchor }}';
 </script>
 {% endif %}
+{% include 'parts/scripts.html' %}
 {% include 'parts/tail.html' %}
