--- a/templates/parts/navigation.html
+++ b/templates/parts/navigation.html
@@ -16,11 +16,9 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#home">Home</a>
                     </li>
-{#% disable Screenshot section
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#screenshots">Screenshots</a>
                     </li>
-%#}
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#faq">FAQ</a>
                     </li>
@@ -29,6 +27,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#application">Apply via Discord</a>
+                    </li>
+                </ul>
+                {% elif request.endpoint == "galery" %}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="/#home">Home</a>
                     </li>
                 </ul>
                 {% endif %}
